<resources>
    <string name="app_name">"리딜"</string>
    <string name="loading">불러 오는 중</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Memo-->
    <string name="back_button">Back</string>
    <string name="untitled">&lt;Untitled&gt;</string>
    <string name="memo_toolbar_title">메모 전체 보기</string>
    <string name="memo_tab_item_name_photo">포토 메모</string>
    <string name="memo_tab_item_name_voice">음성 메모</string>
    <string name="record_memo_toolbar">음성 메모</string>
    <string name="photo_memo_toolbar">포토 메모</string>
    <string name="photo_detail_toolbar">메모 사진 리스트</string>
    <string name="add_photo_memo_toolbar">포토 메모 등록</string>
    <string name="add_photo_memo_body_empty_photo">사진을 추가해주세요</string>
    <string name="add_photo_memo_body_text_field_placeholder">메모</string>
    <string name="add_photo_memo_bottom_button">포토 메모 등록</string>
    <string name="add_record_memo_toolbar">포토 메모 등록</string>
    <string name="add_record_memo_body_text_field_placeholder">메모</string>
    <string name="add_record_memo_bottom_button">음성 메모 등록</string>
    <string name="add_record_add_file_button">새로 파일을 등록하거나 녹음 하실 수 있어요</string>
    <string name="add_record_save_dialog_title">녹음 파일 저장</string>

    <!--    Trade-->
    <string name="trade_edit">거래 내역 수정</string>
    <string name="trade_delete">거래 내역 삭제</string>
    <string name="trade_cancel">삭제 취소</string>
    <string name="trade_history">거래 내역</string>
    <string name="trade_sales">매출</string>
    <string name="trade_unit">건</string>
    <string name="amount_unit">원</string>
    <string name="accounts_receivable">미수금</string>
    <string name="overdue_receivables">발생 미수금</string>
    <string name="received_amount">받은 금액</string>
    <string name="trade_total_sales_amount">총 판매 금액</string>
    <string name="amount">금액</string>
    <string name="unit_price">단가</string>
    <string name="count_unit">개</string>
    <string name="quantity">수량</string>
    <string name="name_product">품명</string>
    <string name="trade_update">수정 완료</string>
    <string name="trade_client_select">거래처 선택</string>
    <string name="add_trade_deposit">입금 내역 추가</string>
    <string name="add_trade_sales">거래 내역 추가</string>
    <string name="trade_select_client_message">거래처 또는 담당자 이름으로 검색</string>
    <string name="deposit">입금</string>

    <!-- Account-->
    <string name="by_views">조회순</string>
    <string name="by_visits">방문순</string>
    <string name="by_contacts">연락순</string>
    <string name="by_registrations">등록순</string>
    <string name="is_favorite">즐겨 찾기</string>
    <string name="is_trading">거래 중</string>
    <string name="is_trying_to_trade">거래 시도</string>
    <string name="is_trade_paused">거래 중지</string>
</resources>