<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hifi.redeal.trade.ui.viewmodel.TradeByClientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutTransactionByClientMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarTransactionByClientMain"
                style="@style/Theme.ReDeal.ToolbarTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/Theme.ReDeal.ToolbarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/transaction_toolbar_menu"
                app:navigationIcon="@drawable/arrow_back_ios_24px"
                app:title="@string/trade_history"
                app:titleTextAppearance="@style/account_detail_toolbar_title_text_appearance"
                app:titleTextColor="@color/primary20" />

            <View
                android:id="@+id/TransactionByClientDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary20" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="105dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayoutTransactionByClientMain">

            <TextView
                android:id="@+id/textViewByClientTran1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:text="@string/trade_sales"
                android:textColor="@color/text10"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTotalSalesCountByClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:textColor="@color/text10"
                android:textSize="16sp"
                android:text='@{viewModel.salesTradeCount}'
                app:layout_constraintEnd_toStartOf="@+id/textViewByClientTran2"
                app:layout_constraintStart_toEndOf="@+id/textViewByClientTran1"
                app:layout_constraintTop_toTopOf="@+id/textViewByClientTran1" />

            <TextView
                android:id="@+id/textTotalSalesByClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:textColor="@color/text10"
                android:textSize="16sp"
                android:text='@{viewModel.salesTradeAmount}'
                app:layout_constraintEnd_toStartOf="@+id/textViewByClientTran3"
                app:layout_constraintTop_toTopOf="@+id/textViewByClientTran2" />

            <TextView
                android:id="@+id/textTotalReceivablesByClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:textColor="@color/primary20"
                android:textSize="16sp"
                android:text='@{viewModel.tradeReceivables}'
                app:layout_constraintEnd_toStartOf="@+id/textViewByClientTran4"
                app:layout_constraintTop_toTopOf="@+id/textViewByClientTran5" />

            <TextView
                android:id="@+id/textViewByClientTran2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:text="@string/trade_unit"
                android:textColor="@color/text10"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textTotalSalesCountByClient"
                app:layout_constraintTop_toTopOf="@+id/textTotalSalesCountByClient" />

            <TextView
                android:id="@+id/textViewByClientTran3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:text="@string/amount_unit"
                android:textColor="@color/text10"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTotalSalesByClient" />

            <TextView
                android:id="@+id/textViewByClientTran4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:text="@string/amount_unit"
                android:textColor="@color/primary20"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTotalReceivablesByClient" />

            <TextView
                android:id="@+id/textViewByClientTran5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:text="@string/accounts_receivable"
                android:textColor="@color/text10"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewByClientTran1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/text70"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:layout_editor_absoluteX="1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transactionByClientRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="74dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/primary95"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ImgBtnAddDepositByClient"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanumsquareneo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add_trade_deposit"
                    android:textColor="@color/primary10"
                    android:textSize="14sp"
                    app:drawableTopCompat="@drawable/money_24px" />

                <TextView
                    android:id="@+id/ImgBtnAddTransactionByClient"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanumsquareneo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add_trade_sales"
                    android:textColor="@color/primary10"
                    android:textSize="14sp"
                    app:drawableTopCompat="@drawable/swap_horiz_24px" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
