<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="4dp"
    android:transitionGroup="true">

    <TextView
        android:id="@+id/textTradeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nanumsquareneo_regular"
        android:text="@string/loading"
        android:textColor="@color/text10"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tradeClientNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/nanumsquareneo_regular"
        android:text="@string/loading"
        android:textColor="@color/text10"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textTradeDate"
        app:layout_constraintTop_toTopOf="@+id/textTradeDate" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:elevation="4dp"
        android:transitionGroup="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTradeDate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <TextView
                android:id="@+id/textTrade24"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="@string/amount_unit"
                android:textColor="@color/primary20"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recievablesTextView" />

            <TextView
                android:id="@+id/recievablesTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|right"
                android:hint="@string/accounts_receivable"
                android:textColor="@color/primary20"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/textTrade24"
                app:layout_constraintTop_toTopOf="@+id/textTrade23" />

            <TextView
                android:id="@+id/textTrade23"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="@string/overdue_receivables"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textTrade21"
                app:layout_constraintTop_toBottomOf="@+id/textTrade21"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/recievedAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|right"
                android:hint="@string/received_amount"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/textTrade22"
                app:layout_constraintTop_toTopOf="@+id/textTrade21" />

            <TextView
                android:id="@+id/textTrade21"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center"
                android:text="@string/received_amount"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textTrade16"
                app:layout_constraintTop_toBottomOf="@+id/divider9"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/divider9"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@color/text70"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalSalesAmountTextView" />

            <TextView
                android:id="@+id/totalSalesAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|right"
                android:hint="@string/trade_total_sales_amount"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/textTrade20"
                app:layout_constraintTop_toTopOf="@+id/textTrade18" />

            <TextView
                android:id="@+id/textTrade18"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|right"
                android:text="@string/amount"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/totalSalesAmountTextView"
                app:layout_constraintTop_toTopOf="@+id/textTrade17" />

            <TextView
                android:id="@+id/textTrade17"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="left"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="@string/amount_unit"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/itemPriceTextView"
                app:layout_constraintTop_toTopOf="@+id/itemPriceTextView" />

            <TextView
                android:id="@+id/textTrade20"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="@string/amount_unit"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textTrade22"
                app:layout_constraintTop_toTopOf="@+id/totalSalesAmountTextView" />

            <TextView
                android:id="@+id/textTrade22"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="@string/amount_unit"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recievedAmountTextView" />

            <TextView
                android:id="@+id/itemPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="start|center_vertical"
                android:hint="단가"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textTrade16"
                app:layout_constraintTop_toTopOf="@+id/textTrade16" />

            <TextView
                android:id="@+id/textTrade16"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="단가"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textTrade13"
                app:layout_constraintTop_toBottomOf="@+id/textTrade13" />

            <TextView
                android:id="@+id/textTrade14"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="개"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/itemSalesCountTextView"
                app:layout_constraintTop_toTopOf="@+id/itemSalesCountTextView" />

            <TextView
                android:id="@+id/itemSalesCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="start|center_vertical"
                android:hint="수량"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textTrade13"
                app:layout_constraintTop_toTopOf="@+id/textTrade13" />

            <TextView
                android:id="@+id/textTrade13"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="수량"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textTrade"
                app:layout_constraintTop_toBottomOf="@+id/itemNameTextView" />

            <TextView
                android:id="@+id/itemNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:hint="제품명"
                android:minHeight="20dp"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textTrade"
                app:layout_constraintTop_toTopOf="@+id/textTrade" />

            <TextView
                android:id="@+id/textTrade"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:gravity="center|left"
                android:text="품명"
                android:textColor="@color/text10"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

